--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.task-container {
+  border: 1px black solid;
+  width: 20rem;
+  padding: 5px;
+  margin: 10px;
+  border-radius: 7px;
+}
